--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ small {
       <li><a href="#"><a href="http://valentinesday.github.io/00111111/">00111111</a></li>
       <li><a href="#"><a href="http://www.mu.edu">Mad Libs</a></li>
 <div class="Welcome">
-  <p>welcome<br />
+  <p>MAD LIBS<br />
   <small>Welcome to our website!
 </div>
 <script>
